# CppToDoList

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp
src/Data/: CMakeLists.txt  Repository.cpp  Repository.h
src/Data/Mapper/: TaskListMapper.cpp  TaskListMapper.h  TaskMapper.cpp  TaskMapper.h
src/Domain/: CMakeLists.txt
src/Domain/CreateTodoUseCase/: CreateTodoUseCase.cpp  CreateTodoUseCase.h  CreateTodoUseCaseRepositoryInterface.h
src/Domain/EditTodoUseCase/: EditTodoUseCase.cpp  EditTodoUseCase.h  EditTodoUseCaseRepositoryInterface.h
src/Domain/GetTodosUseCase/: GetTodosUseCase.cpp  GetTodosUseCase.h  GetTodosUseCaseRepositoryInterface.h
src/Domain/Model/: Task.cpp  Task.h
src/Domain/RemoveTodoUseCase/: RemoveTodoUseCase.cpp  RemoveTodoUseCase.h  RemoveTodoUseCaseRepositoryInterface.h
src/Framework/: CMakeLists.txt
src/Framework/Mapper/: TaskListMapper.cpp  TaskListMapper.h  TaskMapper.cpp  TaskMapper.h
src/Framework/Service/: Container.cpp  Container.h
test/: CMakeLists.txt
test/Data/: RepositoryTest.cpp
test/Data/Mapper/: TaskMapperTest.cpp  TasksMapperTest.cpp
test/Domain/CreateTodoUseCase/: CreateTodoUseCaseTest.cpp
test/Domain/EditTodoUseCase/: EditTodoUseCaseTest.cpp
test/Domain/GetTodosUseCase/: GetTodosUseCaseTest.cpp
test/Domain/Model/: TaskTest.cpp
test/Domain/RemoveTodoUseCase/: RemoveTodoUseCaseTest.cpp
test/Framework/Mapper/: TaskListMapperTest.cpp  TaskMapperTest.cpp
test/Framework/Service/: ContainerTest.cpp
